# mujoco-sim-debugging-playbook

./: .gitignore  BEDROCK_OUTREACH_NOTE.md  BEDROCK_SIMULATION_PACKET.md  CONTRIBUTING.md  Dockerfile  EARTHMOVING_SIMULATION_PACKET.md  Makefile  ONE_MONTH_ROBOTICS_SIMULATION_PLAN.md  OUTREACH_NOTE.md  README.md  docker-compose.yml  pyproject.toml
configs/: baseline.json  controller_benchmark.json  domain_randomization.json  earthmoving_benchmark.json  earthmoving_field_logs.json  earthmoving_thresholds.json  interesting_sweeps.json  jobsite_autonomy_eval.json  regression_thresholds.json  stress_sweeps.json
cpp/: terrain_kernel.cpp
dashboard/: app.js  data.json  index.html  styles.css
docs/: action-register-guide.md  artifact-actions-guide.md  artifact-alerts-guide.md  artifact-capacity-guide.md  artifact-closeout-guide.md  artifact-delivery-guide.md  artifact-digest-guide.md  artifact-exec-summary-guide.md  artifact-freshness-guide.md  artifact-handoff-guide.md  artifact-history-guide.md  artifact-packet-guide.md  artifact-readiness-guide.md  artifact-recovery-guide.md  artifact-review-note-guide.md  artifact-scenarios-guide.md  artifact-scorecard-guide.md  backlog-aging-guide.md  bootstrap-env-guide.md  briefing-note-guide.md  bundle-coverage-guide.md  bundle-quality-guide.md  bundle-verifier-guide.md  case-study-guide.md  compatibility-guide.md  container-smoke-guide.md  dashboard-snapshot-actions-guide.md  dashboard-snapshot-alert-packet-guide.md  dashboard-snapshot-alerts-guide.md  dashboard-snapshot-closeout-guide.md  dashboard-snapshot-digest-guide.md  (+74 more)
(+857 files in other folders)
