[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mujoco-sim-debugging-playbook"
version = "0.1.0"
description = "MuJoCo reaching experiments for simulation debugging, parameter sensitivity, and technical writeups."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mujoco>=3.2.0",
  "numpy>=1.26.0",
  "matplotlib>=3.8.0",
  "torch>=2.11.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mujoco_sim_debugging_playbook.assets" = ["*.xml"]
